# cafablast

./: README.md  pyproject.toml
cafablast/: __init__.py  main.py
cafablast/data/: bp_scores.npz  cc_scores.npz  mf_scores.npz
cafablast/data/fake-data/: create-fake-data
